--- a/Speech Recognization/Info.plist
+++ b/Speech Recognization/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>&quot;This app needs to be able to hear you in order to take dictation&quot;</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>&quot;This app needs to be able to recognize what you&apos;re saying to show it as text&quot;</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
